Validation message alignment issue fixed.

--- a/Hygieia_UI/UI/src/app/css/dashboardCSS.less
+++ b/Hygieia_UI/UI/src/app/css/dashboardCSS.less
@@ -151,6 +151,9 @@ color: #000;
 .form-horizontal.validation-message-align-center .form-group.has-error .help-block{
     margin-left:34%;
 }
+.validation-message-align-mainpopups .form-group.has-error .help-block{
+    float:left;
+}
 .has-error .form-control{
 	border-color:#e50800;
 }
